addon/styles/_pix-modal.scss
.pix-modal__overlay {
  position: fixed;
  z-index: 1000;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow-y: auto;
  text-align: center; // Used to center horizontally the inline-block modal content
  padding: $spacing-xs 0;
  background-color: rgba(52, 69, 99, 0.7);
  transition: all 0.3s ease-in-out;

  // This block is used to center vertically the modal
  // if the content is less than 100vh
  // Inspired by https://mui.com/material-ui/react-dialog/#scrolling-long-content
  &::after {
    content: "";
    display: inline-block;
    vertical-align: middle;
    height: 100%;
    width: 0px;
  }

  &--hidden {
    visibility: hidden;
    opacity: 0;
  }
}

$modal-padding: 24px;
$mobile-close-button-size: 32px;
$tablet-close-button-size: 40px;
$space-between-title-and-close-button: 8px;
$button-margin: 16px;

.pix-modal {
  @import 'reset-css';
  display: inline-block;
  vertical-align: middle; // Centered vertically with the .pix-modal__overlay::after which is 100% height
  width: 512px;
  max-width: calc(100% - #{2 * $spacing-xs}); // Horizontal margin sets here to have extra space for the .pix-modal__overlay::after on mobile
  text-align: initial;
  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);

  &__header {
    background: $pix-neutral-0;
    border-bottom: 1px solid $pix-neutral-20;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    padding: $modal-padding;
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
  }

  &__close-button {
    flex-shrink: 0;
    margin-top: -4px;

    @include device-is('tablet') {
      height: $tablet-close-button-size;
      width: $tablet-close-button-size;
    }
  }

  &__title {
    margin-bottom: 0;
    font-family: $font-open-sans;
    color: $pix-neutral-90;
    font-size: 1.25rem;
    line-height: 1.875rem;
    font-weight: $font-normal;
    padding-right: $mobile-close-button-size + $space-between-title-and-close-button;

    @include device-is('tablet') {
      padding-right: $tablet-close-button-size + $space-between-title-and-close-button;
    }
  }

  &__content {
    background-color: $pix-neutral-10;
    padding: $modal-padding;
    font-size: 0.875rem;
    color: $pix-neutral-90;
    line-height: 1.375rem;
    font-family: $font-roboto;
    font-weight: $font-normal;

    p:last-child {
      margin-bottom: 0;
    }
  }

  &__footer {
    background-color: $pix-neutral-10;
    padding: 0 $modal-padding $modal-padding - $button-margin;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;

    @include device-is('tablet') {
      display: flex;
      justify-content: flex-end;
      flex-wrap: wrap;
    }

    .pix-button {
      margin-bottom: $button-margin;
      width: 100%;

      @include device-is('tablet') {
        margin: 0 0 $button-margin $button-margin;
        width: auto;
      }
    }
  }
}

